--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^2.1.3",
+    "react-spring": "^9.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
