--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^2.1.3",
     "react-spring": "^9.5.0",
