--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.13.4",
     "react-spring": "^9.5.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +47,5 @@
     "@testing-library/cypress": "^8.0.3",
     "cypress": "^10.4.0"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
