--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.5.1",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.4",
     "react-spring": "^9.5.0",
     "web-vitals": "^2.1.4"
@@ -21,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --testURL=http://localhost:5000/",
     "eject": "react-scripts eject",
     "cypress": "./node_modules/.bin/cypress open"
   },
@@ -45,7 +46,9 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.3",
-    "cypress": "^10.4.0"
+    "cypress": "^10.4.0",
+    "jest": "^23.6.0",
+    "redux-mock-store": "^1.5.4"
   },
   "proxy": "http://localhost:5000/"
 }
