--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "pg": "^8.7.3"
   },
   "description": ""
