--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
